added final comments and tweaked 'sumprecipitation' route in app.py to round values to two decimal points. This is a workaround for a bug that was causing some values to include a 10th-12th decimal place.

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -1036,6 +1036,7 @@
     "gbt_binned.columns = ['Temperature','Days']\n",
     "print(gbt_binned)\n",
     "\n",
+    "# Plot frequency of temperature readings as histogram including xlabel, ylabel and legend\n",
     "fig, ax = plt.subplots()\n",
     "ax.bar(gbt_binned['Temperature'],gbt_binned['Days'])\n",
     "plt.xlabel(\"Temperature (Degrees Farenheit)\")\n",
